keepassxc stowm add platforms and zshrc add hash {send,recv}_keystore

--- a/keepassxc/.config/keepassxc/keepassxc.ini
+++ b/keepassxc/.config/keepassxc/keepassxc.ini
@@ -9,7 +9,9 @@ TrayIconAppearance=monochrome-light
 
 [PasswordGenerator]
 AdditionalChars=
+EASCII=true
 ExcludedChars=
+Length=9
 
 [SSHAgent]
 Enabled=true
