--- a/keepassxc/.config/keepassxc/keepassxc.ini
+++ b/keepassxc/.config/keepassxc/keepassxc.ini
@@ -15,9 +15,9 @@ QuietSuccess=true
 
 [PasswordGenerator]
 AdditionalChars=
-EASCII=true
+EASCII=false
 ExcludedChars=
-Length=9
+Length=18
 
 [SSHAgent]
 Enabled=true
