--- a/docker/.config/docker/wiped/Dockerfile
+++ b/docker/.config/docker/wiped/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk add --no-cache cryptsetup util-linux e2fsprogs minisign age
+RUN apk add --no-cache cryptsetup util-linux e2fsprogs minisign age git neovim openssh
 
 COPY setup_encryption.sh /usr/local/bin/setup_encryption.sh
 RUN chmod +x /usr/local/bin/setup_encryption.sh
