--- a/keepassxc/.config/keepassxc/keepassxc.ini
+++ b/keepassxc/.config/keepassxc/keepassxc.ini
@@ -4,6 +4,12 @@ ConfigVersion=2
 [Browser]
 CustomProxyLocation=
 
+[FdoSecrets]
+ConfirmAccessItem=true
+Enabled=true
+ShowNotification=true
+UnlockBeforeSearch=true
+
 [GUI]
 ApplicationTheme=dark
 TrayIconAppearance=monochrome-light
@@ -15,9 +21,11 @@ QuietSuccess=true
 
 [PasswordGenerator]
 AdditionalChars=
+AdvancedMode=false
 EASCII=false
 ExcludedChars=
-Length=18
+Length=24
+Logograms=true
 
 [SSHAgent]
 Enabled=true
